# abstract-classifier

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  gunicorn.conf.py  implementation-diagram.md  implementation-plan.md  manage.py  open-questions.txt  personal-notes.txt  pyproject.toml
.claude/: settings.json
.codex/: config.toml
arxiv_ml/: config.py  contract.py  enums.py  loader.py
arxiv_ml/predictors/: stub.py  text.py  tfidf.py
arxiv_ml/tests/: test_tfidf_predictor.py
classifier/: apps.py  exceptions.py  middleware.py  observability.py  registry.py  serializers.py  urls.py  views.py
classifier/tests/: conftest.py  test_health.py  test_predict.py  test_validation.py
config/: settings.py  urls.py
docs/: Task 1 AI Engineer.md  implementation-diagram.md  implementation-plan.md  issues.md
pretrained/tfidf/: labels.json  meta.json
training/: config.py  eda.py  evaluate.py  prepare_data.py  train_baseline.py
